--- a/src/components/assets/css/dark.less
+++ b/src/components/assets/css/dark.less
@@ -4,135 +4,134 @@
 */
 
 // Dark
-/deep/ .markdown-theme-dark{
-    pre {
-        display: block;
-        padding: 20px 10px!important;
-        border-radius: 4px;
-        margin: 20px 0 !important;
-        background: #1e1e1e;
-        color: #DCDCDC;
-        overflow-y: hidden !important;
-        overflow-x: auto !important;
-        font-family: Menlo, Consolas, "Courier New", Courier, FreeMono, monospace !important;
+:deep(.markdown-theme-dark) {
+  pre {
+    display: block;
+    padding: 20px 10px !important;
+    border-radius: 4px;
+    margin: 20px 0 !important;
+    background: #1e1e1e;
+    color: #dcdcdc;
+    overflow-y: hidden !important;
+    overflow-x: auto !important;
+    font-family: Menlo, Consolas, "Courier New", Courier, FreeMono, monospace !important;
 
-        * {
-            line-height: 1.6 !important;
-            font-size: 14px;
-            font-family: Menlo, Consolas, "Courier New", Courier, FreeMono, monospace !important;
-        }
+    * {
+      line-height: 1.6 !important;
+      font-size: 14px;
+      font-family: Menlo, Consolas, "Courier New", Courier, FreeMono, monospace !important;
     }
+  }
 
-    code {
-        padding: 0 !important;
-        margin: 0 !important;
-    }
+  code {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
 
+  .hljs-literal,
+  .hljs-name,
+  .hljs-symbol {
+    color: #659bd1;
+  }
 
-    .hljs-literal,
-    .hljs-name,
-    .hljs-symbol {
-        color: #659bd1;
-    }
+  .hljs-keyword {
+    color: #bc89bd;
+  }
 
-    .hljs-keyword {
-        color: #bc89bd;
-    }
+  .hljs-link {
+    color: #569cd6;
+    text-decoration: underline;
+  }
 
-    .hljs-link {
-        color: #569CD6;
-        text-decoration: underline;
-    }
+  .hljs-built_in,
+  .hljs-type {
+    color: #4ec9b0;
+  }
 
-    .hljs-built_in,
-    .hljs-type {
-        color: #4EC9B0;
-    }
+  .hljs-class,
+  .hljs-number {
+    color: #b8d7a3;
+  }
 
-    .hljs-class,
-    .hljs-number {
-        color: #B8D7A3;
-    }
+  .hljs-meta-string,
+  .hljs-string {
+    color: #d69d85;
+  }
 
-    .hljs-meta-string,
-    .hljs-string {
-        color: #D69D85;
-    }
+  .hljs-regexp,
+  .hljs-template-tag {
+    color: #9a5334;
+  }
 
-    .hljs-regexp,
-    .hljs-template-tag {
-        color: #9A5334;
-    }
+  .hljs-formula,
+  .hljs-function,
+  .hljs-params,
+  .hljs-subst,
+  .hljs-title {
+    color: #dcdcdc;
+  }
 
-    .hljs-formula,
-    .hljs-function,
-    .hljs-params,
-    .hljs-subst,
-    .hljs-title {
-        color: #DCDCDC;
-    }
+  .hljs-comment,
+  .hljs-quote {
+    color: #57a64a;
+    font-style: italic;
+  }
 
-    .hljs-comment,
-    .hljs-quote {
-        color: #57A64A;
-        font-style: italic;
-    }
+  .hljs-doctag {
+    color: #608b4e;
+  }
 
-    .hljs-doctag {
-        color: #608B4E;
-    }
+  .hljs-meta,
+  .hljs-meta-keyword,
+  .hljs-tag {
+    color: #9b9b9b;
+  }
 
-    .hljs-meta,
-    .hljs-meta-keyword,
-    .hljs-tag {
-        color: #9B9B9B;
-    }
+  .hljs-template-variable,
+  .hljs-variable {
+    color: #bd63c5;
+  }
 
-    .hljs-template-variable,
-    .hljs-variable {
-        color: #BD63C5;
-    }
+  .hljs-attr,
+  .hljs-attribute,
+  .hljs-builtin-name {
+    color: #9cdcfe;
+  }
 
-    .hljs-attr,
-    .hljs-attribute,
-    .hljs-builtin-name {
-        color: #9CDCFE;
-    }
+  .hljs-section {
+    color: gold;
+  }
 
-    .hljs-section {
-        color: gold;
-    }
+  .hljs-emphasis {
+    font-style: italic;
+  }
 
-    .hljs-emphasis {
-        font-style: italic;
-    }
+  .hljs-strong {
+    font-weight: bold;
+  }
 
-    .hljs-strong {
-        font-weight: bold;
-    }
+  .hljs-bullet,
+  .hljs-selector-attr,
+  .hljs-selector-class,
+  .hljs-selector-id,
+  .hljs-selector-pseudo,
+  .hljs-selector-tag {
+    color: #d7ba7d;
+  }
 
-    .hljs-bullet,
-    .hljs-selector-attr,
-    .hljs-selector-class,
-    .hljs-selector-id,
-    .hljs-selector-pseudo,
-    .hljs-selector-tag {
-        color: #D7BA7D;
-    }
+  .hljs-addition {
+    background-color: #144212;
+    display: inline-block;
+    width: 100%;
+  }
 
-    .hljs-addition {
-        background-color: #144212;
-        display: inline-block;
-        width: 100%;
-    }
+  .hljs-deletion {
+    background-color: #600;
+    display: inline-block;
+    width: 100%;
+  }
 
-    .hljs-deletion {
-        background-color: #600;
-        display: inline-block;
-        width: 100%;
-    }
-
-    .hljs-comment {
-        font-style: normal;
-    }
+  .hljs-comment {
+    font-style: normal;
+  }
 }
