--- a/src/components/assets/css/github.less
+++ b/src/components/assets/css/github.less
@@ -3,111 +3,110 @@
 *Author zhaoxuhui
 */
 // gitHub 风格
-/deep/ .markdown-theme-gitHub{
-    pre {
-        padding: 20px 10px!important;
-        display: block;
-        overflow-x: auto;
-        color: #333;
-        background: #f7f8fa !important;
-        font-size: 13px;
-        line-height: 20px;
-        border-radius: 4px;
-        margin: 10px 0 !important;
-        overflow-x: auto !important;
+:deep(.markdown-theme-gitHub) {
+  pre {
+    padding: 20px 10px !important;
+    display: block;
+    overflow-x: auto;
+    color: #333;
+    background: #f7f8fa !important;
+    font-size: 13px;
+    line-height: 20px;
+    border-radius: 4px;
+    margin: 10px 0 !important;
+    overflow-x: auto !important;
 
-        * {
-            font-family: Consolas !important;
-        }
+    * {
+      font-family: Consolas !important;
     }
+  }
 
-    .hljs-comment,
-    .hljs-quote {
-        color: #998;
-        font-style: italic;
-    }
+  .hljs-comment,
+  .hljs-quote {
+    color: #998;
+    font-style: italic;
+  }
 
-    .hljs-selector-tag,
-    .hljs-subst {
-        color: #333;
-        font-weight: bold;
-    }
+  .hljs-selector-tag,
+  .hljs-subst {
+    color: #333;
+    font-weight: bold;
+  }
 
-    .hljs-keyword {
-        color: #d73a49;
-    }
+  .hljs-keyword {
+    color: #d73a49;
+  }
 
-    .hljs-literal,
-    .hljs-number,
-    .hljs-tag .hljs-attr,
-    .hljs-template-variable,
-    .hljs-variable {
-        color: #008080;
-    }
+  .hljs-literal,
+  .hljs-number,
+  .hljs-tag .hljs-attr,
+  .hljs-template-variable,
+  .hljs-variable {
+    color: #008080;
+  }
 
-    .hljs-doctag,
-    .hljs-string {
-        color: #d73a49;
-    }
+  .hljs-doctag,
+  .hljs-string {
+    color: #d73a49;
+  }
 
-    .hljs-section,
-    .hljs-selector-id,
-    .hljs-title {
-        color: #900;
-        font-weight: bold;
-    }
+  .hljs-section,
+  .hljs-selector-id,
+  .hljs-title {
+    color: #900;
+    font-weight: bold;
+  }
 
-    .hljs-subst {
-        font-weight: normal;
-    }
+  .hljs-subst {
+    font-weight: normal;
+  }
 
-    .hljs-class .hljs-title,
-    .hljs-type {
-        color: #458;
-        font-weight: bold;
-    }
+  .hljs-class .hljs-title,
+  .hljs-type {
+    color: #458;
+    font-weight: bold;
+  }
 
-    .hljs-attribute,
-    .hljs-name,
-    .hljs-tag {
-        color: #000080;
-        font-weight: normal;
-    }
+  .hljs-attribute,
+  .hljs-name,
+  .hljs-tag {
+    color: #000080;
+    font-weight: normal;
+  }
 
-    .hljs-link,
-    .hljs-regexp {
-        color: #009926;
-    }
+  .hljs-link,
+  .hljs-regexp {
+    color: #009926;
+  }
 
-    .hljs-bullet,
-    .hljs-symbol {
-        color: #990073;
-    }
+  .hljs-bullet,
+  .hljs-symbol {
+    color: #990073;
+  }
 
-    .hljs-built_in,
-    .hljs-builtin-name {
-        color: #0086b3;
-    }
+  .hljs-built_in,
+  .hljs-builtin-name {
+    color: #0086b3;
+  }
 
-    .hljs-meta {
-        color: #999;
-        font-weight: bold;
-    }
+  .hljs-meta {
+    color: #999;
+    font-weight: bold;
+  }
 
-    .hljs-deletion {
-        background: #fdd;
-    }
+  .hljs-deletion {
+    background: #fdd;
+  }
 
-    .hljs-addition {
-        background: #dfd;
-    }
+  .hljs-addition {
+    background: #dfd;
+  }
 
-    .hljs-emphasis {
-        font-style: italic;
-    }
+  .hljs-emphasis {
+    font-style: italic;
+  }
 
-    .hljs-strong {
-        font-weight: bold;
-    }
-
+  .hljs-strong {
+    font-weight: bold;
+  }
 }
